# scale-codec-cpp

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: feature_option.cmake  generate_decompose_and_apply.cmake
cmake/Hunter/: config.cmake
include/scale/: bit_vector.hpp  bitvec.hpp  configurable.hpp  decoder.hpp  decoder_backend.hpp  encode_append.hpp  encoder.hpp  encoder_backend.hpp  optional_bool.hpp  scale.hpp  scale_error.hpp  types.hpp
include/scale/backend/: for_count.hpp  from_bytes.hpp  to_bytes.hpp
include/scale/detail/: collections.hpp  collections_type_traits.hpp  compact_integer.hpp  compact_integer_classic.hpp  compact_integer_jam.hpp  custom_decomposition.hpp  decomposable.hpp  decomposable_type_traits.hpp  decompose_and_apply.hpp.in  enum.hpp  fixed_width_integer.hpp  optional.hpp  smart_pointers.hpp  tagged.hpp  type_traits.hpp  variant.hpp
include/scale/outcome/: outcome_throw.hpp
src/: CMakeLists.txt  encode_append.cpp  scale_error.cpp
test/: CMakeLists.txt  scale_array_test.cpp  scale_bitvec_test.cpp  scale_boolean_test.cpp  scale_boost_variant_test.cpp  scale_collection_test.cpp  scale_compact_integer_test.cpp  scale_compact_test.cpp  scale_convenience_functions_test.cpp  scale_custom_decomposing_test.cpp  scale_decoder_test.cpp  scale_decomposable_test.cpp  scale_encode_append_test.cpp  scale_encode_counter_test.cpp  scale_enum_test.cpp  scale_fixed_integer_test.cpp  scale_optional_test.cpp  scale_pair_test.cpp  scale_sptr_and_refs_test.cpp  scale_std_variant_test.cpp  scale_strings_test.cpp  scale_tagged_test.cpp  scale_tune_test.cpp  scale_tuple_test.cpp
vcpkg-overlay/qtils/: portfile.cmake
